--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,7 @@ body {
 
 .main-container {
   background: url("/img/lawyer-back.jpg");
-  background-size: 100%;
-
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  background-size: cover;
 }
 
 .content-first {
@@ -20,12 +16,11 @@ body {
   margin: 0px auto;
   width: 95%;
   color: aliceblue;
-  margin-top: 80px;
 }
 
 .box {
-  margin-top: 30px;
   margin: 30px;
+  margin-top: 120px;
 }
 .left-content {
   margin: 20px;
@@ -70,8 +65,9 @@ body {
 }
 
 .social {
-  padding: 100px;
-  margin-left: 50px;
+  padding: 25px;
+  margin-top: 170px;
+  margin-left: 345px;
 }
 
 li {
@@ -84,8 +80,8 @@ li {
 .content-second {
   display: flex;
   width: 87%;
-  height: 130px;
-  margin: -30px auto;
+  margin: 0px auto;
+  margin-top: 50px;
 }
 
 .firstcon {
@@ -107,7 +103,6 @@ li {
 
 .secondcon {
   display: flex;
-  position: relative;
 }
 h3 {
   color: rgb(162, 162, 162);
@@ -118,6 +113,7 @@ h3 {
   margin-left: 300px;
   height: 130px;
   width: 60%;
+  cursor: pointer;
 }
 
 .service-box {
