--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ span {
   margin: 15px;
   font-size: 50px;
   font-family: "Bricolage Grotesque", sans-serif;
-  color: rgb(2, 1, 25);
+  color: rgba(2, 1, 25, 0.725);
 }
 
 .featured-law-service article {
@@ -266,6 +266,90 @@ span {
 }
 a {
   text-decoration: none;
-  margin: 2px;
+
   color: black;
+  transition: 250ms;
+}
+
+.view-more a:hover {
+  color: orange;
+}
+
+.our-features {
+  display: flex;
+  margin: 0px auto;
+  width: 90%;
+  margin-top: 100px;
+}
+
+.ourfeatures {
+  font-size: 30px;
+  color: rgb(2, 1, 25, 0.725);
+  font-weight: bold;
+  font-family: "Bricolage Grotesque", sans-serif;
+}
+
+span {
+  text-decoration: underline orange;
+  text-underline-offset: 15px;
+}
+
+.section1 {
+  color: black;
+  width: 80%;
+}
+
+.section1 article {
+  margin-top: 25px;
+  color: rgb(63, 63, 63);
+  padding: 12px;
+  padding-left: 0px;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+#learn-more {
+  margin-top: 10px;
+  background: rgb(22%, 24%, 31%);
+  border: 1px solid rgb(22%, 24%, 31%);
+}
+
+#learn-more:hover {
+  background: none;
+  border: 1px solid orange;
+  color: orange;
+}
+.section2 {
+  display: flex;
+  flex-wrap: wrap;
+  color: black;
+}
+
+.subsec {
+  display: flex;
+  margin: 0px auto;
+  width: 45%;
+  margin: 15px;
+  margin-top: 0px;
+}
+
+.icon {
+  font-size: 40px;
+  color: orange;
+  padding-right: 15px;
+}
+
+.details {
+  margin-top: -15px;
+  color: rgb(2, 1, 25, 0.725);
+}
+
+.details h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+  font-family: "Bricolage Grotesque", sans-serif;
+}
+.details article {
+  color: rgb(107, 107, 107);
+  line-height: 25px;
 }
