--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ li {
   width: 89%;
   margin: 0px auto;
   margin-top: 50px;
+  padding: 40px;
 }
 
 .firstcon {
@@ -101,7 +102,7 @@ li {
 .secondcon {
   display: flex;
 }
-h3 {
+.contact-us h3 {
   color: rgb(162, 162, 162);
 }
 
@@ -127,6 +128,9 @@ h3 {
 .service-icon {
   font-size: 30px;
 }
+.service-icon p {
+  font-weight: bold;
+}
 
 #box-4 {
   border: none;
@@ -138,10 +142,56 @@ h3 {
   opacity: 80%;
 }
 
-.NY {
-  font-size: 50px;
-  font-family: "Courier New", Courier, monospace;
+.title {
+  margin: 30px;
+  margin-bottom: 0px;
+  color: orange;
+  font-weight: bold;
+}
+.layer-theme {
+  display: flex;
   color: black;
+  margin: 72px;
+}
+
+.justic {
+  display: contents;
+}
+.justic img {
+  width: 30%;
+}
+
+.layout {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 30px;
+}
+.layout-section {
+  width: 350px;
+  padding: 0px;
+  margin-left: 30px;
+  color: rgb(19%, 21%, 29%);
+}
+
+.layout-section p {
+  color: rgb(162, 162, 162);
+}
+
+.layout-section h3 {
+  margin-bottom: -5px;
+  font-family: "Bricolage Grotesque", sans-serif;
+}
+#lay-section-1 {
+  width: 770px;
+}
+#lay-section-1 h1 {
+  font-size: 50px;
+  margin-top: 0px;
+  margin-bottom: -10px;
+  font-family: "Bricolage Grotesque", sans-serif;
+}
+#lay-section-1 P {
+  font-size: 18px;
 }
 
 .support {
@@ -162,6 +212,7 @@ h3 {
   display: inline;
   font-size: 30px;
   margin-right: 90px;
+  font-family: "Bricolage Grotesque", sans-serif;
 }
 
 .msgdes {
@@ -219,7 +270,7 @@ span {
 
 .all-services {
   display: flex;
-  margin: 50px auto;
+  margin: 60px auto;
   padding-bottom: 150px;
   width: 89%;
   justify-content: space-between;
@@ -298,7 +349,7 @@ span {
 
 .section1 article {
   margin-top: 25px;
-  color: rgb(63, 63, 63);
+  color: rgb(100 98 98);
   padding: 12px;
   padding-left: 0px;
   font-size: 18px;
@@ -423,8 +474,10 @@ input {
 
 textarea {
   margin: 10px;
+  padding: 15px;
   background: transparent;
   width: 94%;
   border: 1px solid rgb(92, 92, 92);
   font-family: "Lato", sans-serif;
+  color: white;
 }
